Fixing alignment

--- a/challah/style.css
+++ b/challah/style.css
@@ -44,7 +44,7 @@
   position: absolute;
   top: 30vh;
   width: 40vw;
-  margin: 0 25vw;
+  margin: 0 30vw;
   padding: 4vh 0;
   border: 1px solid var(--black);
 }
